--- a/style.css
+++ b/style.css
@@ -1,49 +1,107 @@
 body {
-  background-color: #262271;
+  background-color: #a0a3ee; /* Pale purple background */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  padding-top: 0;
+}
+
+.side-box {
+  width: 35vh;
+  height: 80vh;
+  background-color: #d3d1ff;
+  padding: 2vh;
+  display: flex;
+  flex-direction: column;
+  border-radius: 1vh;
+  text-align: center;
+  align-items: center;
+  position: absolute;
+  top: 10vh;
+  left: 10vh;
+}
+
+.side-box h1{
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin: 2vh;
+  font-size: calc(1.4vw + 1.4vh);
+}
+.side-box h3 {
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin: 0.5vh;
+  font-size: calc(0.7vw + 0.7vh);
 }
 
 .banner {
-  background-color: #8b7de5;
-  color: rgb(22, 9, 86);
-  text-align: center;
-  padding: 2vh;
-}
-
-.container {
+  background-color: #a0a3ee;
+  color: #333333;
+  font-size: 1.5em;
+  width: 100%;
+  box-sizing: border-box;
+  position: absolute;
+  top: 0;
+  left: 0;
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-end;
+  align-items: center;
 }
 
-.box {
-  width: var(--box-width, 30%);
-  height: var(--box-height, 50vh);
-  background-color: #f0f0f0;
+.button {
+  background: none;
+  border: none;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: #333333;
+  font-size: calc(1vw + 1vh);
+  cursor: pointer;
+  padding: 2vh 5vh;
+}
+
+.button:hover {
+  background-color: #c2c0ff;
+  color: #000000;
+}
+
+.button.selected {
+  font-weight: bold;
+  background-color: #a0a3ee;
+  color: #ffffff;
+}
+
+.content-box {
+  width: 5vh;
+  height: 5vh;
+  background-color: #bbbdff;
+  display: flex;
+  flex-direction:row;
+  border-radius: 1vh;
+  align-items: center;
+}
+
+.content-box p {
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: calc(0.6vw + 0.6vh);
+  margin: 0;
+}
+
+.main-box {
+  width: 130vh;
+  height: 80vh;
+  background-color: #d3d1ff;
+  padding: 2vh;
   display: flex;
   flex-direction: column;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-.header-box {
-  width: 100%;
-  background-color: #8b7de5;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 1em;
-  box-sizing: border-box;
-}
-
-.text-box {
-  width: 100%;
-  flex: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 1em;
-  box-sizing: border-box;
-}
-
-.header-box h2, .text-box p {
+  border-radius: 1vh;
   text-align: center;
+  align-items: center;
+  position: absolute;
+  top: 10vh;
+  left: 50vh;
+}
+
+.main-box h1{
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin: 2vh;
+  font-size: calc(1.5vw + 1.5vh);
 }
