add placeholder sections for about page

--- a/style.css
+++ b/style.css
@@ -70,8 +70,6 @@ body {
 }
 
 .content-box {
-  width: 5vh;
-  height: 5vh;
   background-color: #bbbdff;
   display: flex;
   flex-direction:row;
@@ -82,6 +80,7 @@ body {
 .content-box p {
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: calc(0.6vw + 0.6vh);
+  padding-left: 2vh;
   margin: 0;
 }
 
@@ -92,9 +91,8 @@ body {
   padding: 2vh;
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
   border-radius: 1vh;
-  text-align: center;
-  align-items: center;
   position: absolute;
   top: 10vh;
   left: 50vh;
@@ -104,4 +102,19 @@ body {
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   margin: 2vh;
   font-size: calc(1.5vw + 1.5vh);
+}
+
+.text-box-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 99%;
+}
+
+.text-box {
+  background-color: #bbbdff;
+  display: flex;
+  flex-direction:row;
+  border-radius: 1vh;
+  padding: 3vh;
 }
