--- a/style.css
+++ b/style.css
@@ -119,3 +119,14 @@ body {
   border-radius: 1vh;
   padding: 3vh;
 }
+
+.text-box h2 {
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin: 0.5vh;
+  font-size: calc(0.8vw + 0.8vh);
+}
+.text-box p {
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: calc(0.7vw + 0.7vh);
+  margin: 0.5vh;
+}
