--- a/style.css
+++ b/style.css
@@ -127,6 +127,27 @@ body {
 }
 .text-box p {
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: calc(0.7vw + 0.7vh);
+  font-size: calc(0.5vw + 1vh);
   margin: 0.5vh;
+}
+
+.text-box-2 {
+  background-color: #bbbdff;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  justify-content: center;
+}
+
+.text-box-2 h1 {
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: calc(0.5vw + 0.75vh);
+  margin: 0;
+}
+
+.text-box-2 p {
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: calc(0.5vw + 0.6vh);
+  margin: 0;
+  padding: 0;
 }
