--- a/style.css
+++ b/style.css
@@ -121,6 +121,13 @@ a:hover {
   width: 99%;
 }
 
+.text-box-container-2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 95%;
+}
+
 .text-box {
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   background-color: #bbbdff;
